==> ARMmbed/mbed-os/features/unsupported/USBDevice/targets/TARGET_NUVOTON/TARGET_NUC472/USBHAL_NUC472.cpp <==
#include "USBHAL.h"
#include "NUC472_442.h"
#include "pinmap.h"

bool USBHAL::realiseEndpoint(uint8_t endpoint, uint32_t maxPacket, uint32_t options)
{
    uint32_t ep_type;
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);

    USBD_SetEpBufAddr(ep_hw_index, s_ep_buf_ind, maxPacket);
    s_ep_buf_ind += maxPacket;
    USBD_SET_MAX_PAYLOAD(ep_hw_index, maxPacket);

    switch (NU_EP2EPL(endpoint))
    {
    case 1:    case 2:
        ep_type = USB_EP_CFG_TYPE_INT;
        break;

    case 3:    case 4:
        ep_type = USB_EP_CFG_TYPE_ISO;
        break;

    default:
        ep_type = USB_EP_CFG_TYPE_BULK;
    }
    uint32_t ep_dir = (NU_EP_DIR(endpoint) == NU_EP_DIR_IN) ? USB_EP_CFG_DIR_IN : USB_EP_CFG_DIR_OUT;
    USBD_ConfigEp(ep_hw_index, NU_EP2EPL(endpoint), ep_type, ep_dir);

    /* Enable USB/EPX interrupt */
    // NOTE: Require USBD_GINTEN_EPAIE_Pos, USBD_GINTEN_EPBIE_Pos, ... USBD_GINTEN_EPLIE_Pos to be consecutive.
    USBD_ENABLE_USB_INT(USBD->GINTEN | USBD_GINTEN_USBIE_Msk |
                        USBD_GINTEN_CEPIE_Msk |
                        1 << (ep_hw_index + USBD_GINTEN_EPAIE_Pos));  // Added USB/EPX interrupt

    if (ep_dir == 0)
        USBD_ENABLE_EP_INT(ep_hw_index, USBD_EPINTEN_RXPKIEN_Msk);
    else
        USBD_ENABLE_EP_INT(ep_hw_index, USBD_EPINTEN_TXPKIEN_Msk);
    return true;
}

void USBHAL::EP0read(void)
{
    if (s_setup.wLength && ! (s_setup.bmRequestType & 0x80))
    {
        // Control OUT
        USBD_ENABLE_CEP_INT(USBD_CEPINTEN_SETUPPKIEN_Msk | USBD_CEPINTEN_RXPKIEN_Msk);
    }
    else
    {
        // Status stage
        USBD_CLR_CEP_INT_FLAG(USBD_CEPINTSTS_STSDONEIF_Msk);
        USBD_SET_CEP_STATE(USB_CEPCTL_NAKCLR);
        USBD_ENABLE_CEP_INT(USBD_CEPINTEN_STSDONEIEN_Msk);
    }
}

uint32_t USBHAL::EP0getReadResult(uint8_t *buffer)
{
    uint32_t i;
    uint32_t ceprxcnt = USBD->CEPRXCNT;
    for (i = 0; i < ceprxcnt; i ++)
        *buffer ++ = USBD->CEPDAT_BYTE;
    return ceprxcnt;
}

void USBHAL::EP0write(uint8_t *buffer, uint32_t size)
{
    if (buffer && size)
    {
        g_usbd_CtrlInPointer = buffer;
        g_usbd_CtrlInSize = size;
        USBD_CLR_CEP_INT_FLAG(USBD_CEPINTSTS_INTKIF_Msk);
        USBD_ENABLE_CEP_INT(USBD_CEPINTEN_INTKIEN_Msk);
    }
    else
    {
        /* Status stage */
        s_ctrlin_packetsize = 0;
        USBD_CLR_CEP_INT_FLAG(USBD_CEPINTSTS_STSDONEIF_Msk);
        USBD_SET_CEP_STATE(USB_CEPCTL_NAKCLR);
        USBD_ENABLE_CEP_INT(USBD_CEPINTEN_STSDONEIEN_Msk);
    }
}

EP_STATUS USBHAL::endpointReadResult(uint8_t endpoint, uint8_t * buffer, uint32_t *bytesRead) //spcheng
{
    if (endpoint == EP0OUT)
    {
        if (buffer) {
            *((uint16_t *) (buffer + 0)) = (uint16_t) USBD->SETUP1_0;
            *((uint16_t *) (buffer + 2)) = (uint16_t) USBD->SETUP3_2;
            *((uint16_t *) (buffer + 4)) = (uint16_t) USBD->SETUP5_4;
            *((uint16_t *) (buffer + 6)) = (uint16_t) USBD->SETUP7_6;
        }

        s_setup.bmRequestType = (uint8_t) (USBD->SETUP1_0 & 0xff);
        s_setup.bRequest = (int8_t) (USBD->SETUP1_0 >> 8) & 0xff;
        s_setup.wValue = (uint16_t) USBD->SETUP3_2;
        s_setup.wIndex = (uint16_t) USBD->SETUP5_4;
        s_setup.wLength = (uint16_t) USBD->SETUP7_6;
    }
    else
    {
        if (!(s_ep_compl & (1 << NU_EP2EPL(endpoint))))
        {
            while (1)
            {
                if (!(USBD->DMACTL & USBD_DMACTL_DMAEN_Msk))
                    break;
                else
                    if (!USBD_IS_ATTACHED())
                        break;
            }
            gEpReadCnt = USBD_GET_EP_DATA_COUNT(NU_EP2EPH(endpoint));
            if (gEpReadCnt == 0)
            {
                *bytesRead = 0;
                return EP_COMPLETED;
            }
            s_ep_compl |= (1 << NU_EP2EPL(endpoint));
            USBD_SET_DMA_LEN(gEpReadCnt);
            USBD_SET_DMA_ADDR((uint32_t)buffer);
            USBD_SET_DMA_WRITE(NU_EP2EPL(endpoint));
            USBD_ENABLE_DMA();
            return EP_PENDING;;

        }
        else
        {
            if ((USBD->DMACTL & USBD_DMACTL_DMAEN_Msk))
                return EP_PENDING;;

            USBD_CLR_BUS_INT_FLAG(USBD_BUSINTSTS_DMADONEIF_Msk);
            s_ep_compl &= ~(1 << NU_EP2EPL(endpoint));
            *bytesRead = gEpReadCnt;
        }
    }
    return EP_COMPLETED;
}

EP_STATUS USBHAL::endpointWrite(uint8_t endpoint, uint8_t *data, uint32_t size)
{
    uint32_t ep_logic_index = NU_EP2EPL(endpoint);
    if (ep_logic_index == 0)
        return EP_INVALID;
    else
    {
        uint32_t ep_hw_index = NU_EP2EPH(endpoint);
        uint32_t mps = USBD_GET_EP_MAX_PAYLOAD(ep_hw_index);
        if (size > mps) {
            return EP_INVALID;
        }
        if (size < mps)
            g_usbd_ShortPkt = 1;
        if (!(s_ep_compl & (1 << NU_EP2EPL(endpoint))))
        {
            s_ep_compl |= (1 << ep_logic_index);

            while (1)
            {
                if (!(USBD->DMACTL & USBD_DMACTL_DMAEN_Msk))
                    break;
                else
                    if (!USBD_IS_ATTACHED())
                        break;
            }
            USBD_SET_DMA_LEN(size);
            USBD_SET_DMA_ADDR((uint32_t)data);
            USBD_SET_DMA_READ(ep_logic_index);
            USBD_ENABLE_DMA();
        }
    }
    return EP_PENDING;
}

EP_STATUS USBHAL::endpointWriteResult(uint8_t endpoint)
{
    if (!(s_ep_compl & (1 << NU_EP2EPL(endpoint))))
        return EP_COMPLETED;
    else
    {
        if ((USBD_GET_EP_DATA_COUNT(NU_EP2EPH(endpoint))) == 0 && !(USBD->DMACTL & USBD_DMACTL_DMAEN_Msk))
        {
            s_ep_compl &= ~(s_ep_compl & (1 << NU_EP2EPL(endpoint)));
            return EP_COMPLETED;
        }
    }
    return EP_PENDING;
}

void USBHAL::stallEndpoint(uint8_t endpoint)
{
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);
    if (ep_hw_index >= NUMBER_OF_PHYSICAL_ENDPOINTS)
        return;
    USBD_SetStall(ep_hw_index);
}

void USBHAL::unstallEndpoint(uint8_t endpoint)
{
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);
    if (ep_hw_index >= NUMBER_OF_PHYSICAL_ENDPOINTS)
        return;
    USBD_ClearStall(ep_hw_index);
}
