==> ARMmbed/mbed-os/features/unsupported/USBDevice/targets/TARGET_STM/USBHAL_STM32.cpp <==
#define USBSTM_HAL_UNSUPPORTED
#define USBSTM_HAL_UNSUPPORTED
#include "USBHAL.h"
#include "pinmap.h"
#include "USBHAL_STM32.h"
#define EP_ADDR(ep) (((ep) >> 1)|((ep) & 1) << 7)
#define ADDR_EPIN(ep) (((ep) << 1) | 1)
#define ADDR_EPOUT(ep) (((ep) << 1))

bool USBHAL::realiseEndpoint(uint8_t endpoint, uint32_t maxPacket, uint32_t flags)
{
    uint32_t epIndex = EP_ADDR(endpoint);
    uint32_t type;
    uint32_t len;
    HAL_StatusTypeDef ret;
    switch (endpoint) {
        case EP0IN:
        case EP0OUT:
            type =  0;
            break;
        case EPISO_IN:
        case EPISO_OUT:
            type = 1;
            break;
        case EPBULK_IN:
        case EPBULK_OUT:
            type =  2;
            break;
        case EPINT_IN:
        case EPINT_OUT:
            type =  3;
            break;
    }
    if (maxPacket > MAXTRANSFER_SIZE) {
        return false;
    }
    if (epIndex & 0x80) {
        len = HAL_PCDEx_GetTxFiFo(&hpcd, epIndex & 0x7f);
        MBED_ASSERT(len >= maxPacket);
    }
    ret = HAL_PCD_EP_Open(&hpcd, epIndex,  maxPacket, type);
    MBED_ASSERT(ret != HAL_BUSY);
    return (ret == HAL_OK) ? true : false;
}

void USBHAL::EP0read(void)
{
    USBHAL_Private_t *HALPriv = (USBHAL_Private_t *)hpcd.pData;
    uint32_t epIndex = EP_ADDR(EP0OUT);
    uint8_t *pBuf = (uint8_t *)HALPriv->pBufRx0;
    HAL_StatusTypeDef ret;
    HALPriv->epComplete[EP0OUT] = 2;
    ret = HAL_PCD_EP_Receive(&hpcd, epIndex, pBuf, MAX_PACKET_SIZE_EP0);
    MBED_ASSERT(ret != HAL_BUSY);

}

uint32_t USBHAL::EP0getReadResult(uint8_t *buffer)
{
    USBHAL_Private_t *HALPriv = (USBHAL_Private_t *)hpcd.pData;
    uint32_t length = (uint32_t) HAL_PCD_EP_GetRxCount(&hpcd, 0);
    HALPriv->epComplete[EP0OUT] = 0;
    if (length) {
        uint8_t  *buff = (uint8_t *)HALPriv->pBufRx0;
        memcpy(buffer, buff, length);
    }
    return length;
}

void USBHAL::EP0write(uint8_t *buffer, uint32_t size)
{
    /*  check that endpoint maximum size is not exceeding TX fifo */
    MBED_ASSERT(hpcd.IN_ep[0].maxpacket >= size);
    endpointWrite(EP0IN, buffer, size);
}

EP_STATUS USBHAL::endpointReadResult(uint8_t endpoint, uint8_t *buffer, uint32_t *bytesRead)
{
    USBHAL_Private_t *HALPriv = (USBHAL_Private_t *)(hpcd.pData);
    if (HALPriv->epComplete[endpoint] == 0) {
        /*  no reception possible !!! */
        bytesRead = 0;
        return EP_COMPLETED;
    } else if ((HALPriv->epComplete[endpoint] != 1)) {
        return EP_PENDING;
    }
    uint32_t epIndex = EP_ADDR(endpoint);
    uint8_t  *buff = (uint8_t *)HALPriv->pBufRx;
    uint32_t length = (uint32_t) HAL_PCD_EP_GetRxCount(&hpcd, epIndex);
    memcpy(buffer, buff, length);
    *bytesRead = length;
    HALPriv->epComplete[endpoint] = 0;
    return EP_COMPLETED;
}

EP_STATUS USBHAL::endpointWrite(uint8_t endpoint, uint8_t *data, uint32_t size)
{
    USBHAL_Private_t *HALPriv = (USBHAL_Private_t *)(hpcd.pData);
    uint32_t epIndex = EP_ADDR(endpoint);
    HAL_StatusTypeDef ret;
    // clean transmission end flag before requesting transmission
    HALPriv->epComplete[endpoint] = 2;
    ret = HAL_PCD_EP_Transmit(&hpcd, epIndex, data, size);
    MBED_ASSERT(ret != HAL_BUSY);
    // update the status
    if (ret != HAL_OK) {
        return EP_INVALID;
    }
    // fix me return is too simple
    return EP_PENDING;
}

EP_STATUS USBHAL::endpointWriteResult(uint8_t endpoint)
{
    USBHAL_Private_t *HALPriv = (USBHAL_Private_t *)(hpcd.pData);
    if (HALPriv->epComplete[endpoint] == 1) {
        return EP_COMPLETED;
    }
    return EP_PENDING;
}

void USBHAL::stallEndpoint(uint8_t endpoint)
{
    USBHAL_Private_t *HALPriv = (USBHAL_Private_t *)(hpcd.pData);
    HAL_StatusTypeDef ret;
    HALPriv->epComplete[endpoint] = 0;
    ret = HAL_PCD_EP_SetStall(&hpcd, EP_ADDR(endpoint));
    MBED_ASSERT(ret != HAL_BUSY);
}

void USBHAL::unstallEndpoint(uint8_t endpoint)
{
    HAL_StatusTypeDef ret;
    ret = HAL_PCD_EP_ClrStall(&hpcd, EP_ADDR(endpoint));
    MBED_ASSERT(ret != HAL_BUSY);

}
